[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/sprites/tower-defense-top-down/spritesheet/tower-defense_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/gameplay/hit-area/hit-area.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/strategic-point.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile136.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile135.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile134.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile137.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile132.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile133.png" type="Texture" id=9]
[ext_resource path="res://scenes/enemy_wave/enemy_waves_manager.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/gameplay/levels/level_manager.gd" type="Script" id=11]
[ext_resource path="res://scenes/enemy_wave/enemy_group.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/enemy_wave/enemy_wave.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/enemy-call-button/enemy-call-button.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/enemy/enemy-types/tank.tres" type="Resource" id=15]
[ext_resource path="res://scenes/enemy-commander/enemy-commander.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/enemy/enemy-types/tank-elite.tres" type="Resource" id=17]
[ext_resource path="res://scenes/enemy/enemy-types/aircraft.tres" type="Resource" id=18]
[ext_resource path="res://scenes/enemy/enemy-types/aircraft-elite.tres" type="Resource" id=19]
[ext_resource path="res://scenes/gameplay/levels/cr.gd" type="Script" id=20]
[ext_resource path="res://scenes/fx/CoinParticles.tscn" type="PackedScene" id=21]

[sub_resource type="TileSet" id=1]
0/name = "tower-defense_spritesheet.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 960, 768 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 100, 100 )

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 832, 352, 832, -64, 1024, -64, 1024, 448, 736, 640, 1664, 640, 1664, 768, 512, 768, 704, 608, 512, 384, 704, 480, 736, 448, 800, 384 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7 ), PoolIntArray( 8, 4, 7 ), PoolIntArray( 8, 7, 9, 10 ), PoolIntArray( 11, 10, 9 ), PoolIntArray( 11, 9, 12, 3 ), PoolIntArray( 0, 3, 12 ) ]
outlines = [ PoolVector2Array( 832, 352, 800, 384, 512, 384, 512, 768, 1664, 768, 1664, 640, 736, 640, 704, 608, 704, 480, 736, 448, 1024, 448, 1024, -64, 832, -64 ) ]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 971.838, -44.6035, 7, -36, -7, 36, 922.449, 92.8849, -4, -45, 4, 45, 917.11, 219.695, -12, -29.5, 12, 29.5, 951.815, 286.437, 13.2433, -23.8379, -13.2433, 23.8379, 939.802, 363.857, 0, 0, 0, 0, 857.042, 409.242, 0, 0, 0, 0, 682.178, 431.934, 21.1893, -45.5569, -21.1893, 45.5569, 590.074, 501.346, -15.5, -34, 15.5, 34, 590.074, 610.803, 0, 0, 0, 0, 664.289, 679.012, -53.3289, -2.35969, 53.3289, 2.35969, 771.318, 720.634, -54.8008, 3.18198, 54.8008, -3.18198, 998.457, 708.742, -67.5287, -2.12132, 67.5287, 2.12132, 1145.92, 689.715, 0, 0, 0, 0, 1295.76, 703.985, -67.6922, -0.420448, 67.6922, 0.420448, 1424.19, 728.959, -48.3515, 2.52269, 48.3515, -2.52269, 1577.6, 686.147, 0, 0, 0, 0, 1665.6, 717.067 )
}

[node name="Level1" type="Node2D" groups=[
"Levels",
]]
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -65536, 0, 458753, -65535, 0, 458753, -65534, 0, 458753, -65533, 0, 458753, -65532, 0, 458753, -65531, 0, 458753, -65530, 0, 458753, -65529, 0, 458753, -65528, 0, 458753, -65527, 0, 458753, -65526, 0, 458753, -65525, 0, 458753, -65524, 0, 262144, -65523, 0, 262145, -65522, 0, 262145, -65521, 0, 262145, -65520, 1610612736, 262144, -65519, 0, 458753, -65518, 0, 458753, -65517, 0, 458753, -65516, 0, 458753, -65515, 0, 458753, -65514, 0, 458753, -65513, 0, 458753, -65512, 0, 458753, -65511, 0, 458753, -65510, 0, 458753, -65509, 0, 458753, -65508, 0, 458753, 0, 0, 458753, 1, 0, 458753, 2, 0, 458753, 3, 0, 458753, 4, 0, 458753, 5, 0, 458753, 6, 0, 458753, 7, 0, 458753, 8, 0, 458753, 9, 0, 458753, 10, 0, 458753, 11, 0, 458753, 12, 0, 262144, 13, 0, 262145, 14, 0, 262145, 15, 0, 262145, 16, 1610612736, 262144, 17, 0, 458753, 18, 0, 458753, 19, 0, 458753, 20, 0, 458753, 21, 0, 458753, 22, 0, 458753, 23, 0, 458753, 24, 0, 458753, 25, 0, 458753, 26, 0, 458753, 27, 0, 458753, 28, 0, 458753, 65536, 0, 458753, 65537, 0, 458753, 65538, 0, 458753, 65539, 0, 458753, 65540, 0, 458753, 65541, 0, 458753, 65542, 0, 458753, 65543, 0, 458753, 65544, 0, 458753, 65545, 0, 458753, 65546, 0, 458753, 65547, 0, 458753, 65548, 0, 262144, 65549, 0, 262145, 65550, 0, 262145, 65551, 0, 262145, 65552, 1610612736, 262144, 65553, 0, 458753, 65554, 0, 458753, 65555, 0, 458753, 65556, 0, 458753, 65557, 0, 458753, 65558, 0, 458753, 65559, 0, 458753, 65560, 0, 458753, 65561, 0, 458753, 65562, 0, 458753, 65563, 0, 458753, 65564, 0, 458753, 131072, 0, 458753, 131073, 0, 458753, 131074, 0, 458753, 131075, 0, 458753, 131076, 0, 458753, 131077, 0, 458753, 131078, 0, 458753, 131079, 0, 458753, 131080, 0, 458753, 131081, 0, 458753, 131082, 0, 458753, 131083, 0, 458753, 131084, 0, 262144, 131085, 0, 262145, 131086, 0, 262145, 131087, 0, 262145, 131088, 1610612736, 262144, 131089, 0, 458753, 131090, 0, 458753, 131091, 0, 458753, 131092, 0, 458753, 131093, 0, 458753, 131094, 0, 458753, 131095, 0, 458753, 131096, 0, 458753, 131097, 0, 458753, 131098, 0, 458753, 131099, 0, 458753, 131100, 0, 458753, 196608, 0, 458753, 196609, 0, 458753, 196610, 0, 458753, 196611, 0, 458753, 196612, 0, 458753, 196613, 0, 458753, 196614, 0, 458753, 196615, 0, 458753, 196616, 0, 458753, 196617, 0, 458753, 196618, 0, 458753, 196619, 0, 458753, 196620, 0, 262144, 196621, 0, 262145, 196622, 0, 262145, 196623, 0, 262145, 196624, 1610612736, 262144, 196625, 0, 458753, 196626, 0, 458753, 196627, 0, 458753, 196628, 0, 458753, 196629, 0, 458753, 196630, 0, 458753, 196631, 0, 458753, 196632, 0, 458753, 196633, 0, 458753, 196634, 0, 458753, 196635, 0, 458753, 196636, 0, 458753, 262144, 0, 458753, 262145, 0, 458753, 262146, 0, 458753, 262147, 0, 458753, 262148, 0, 458753, 262149, 0, 458753, 262150, 0, 458753, 262151, 0, 458753, 262152, 0, 458753, 262153, 0, 458753, 262154, 0, 458753, 262155, 0, 458753, 262156, 0, 262144, 262157, 0, 262145, 262158, 0, 262145, 262159, 0, 262145, 262160, 1610612736, 262144, 262161, 0, 458753, 262162, 0, 458753, 262163, 0, 458753, 262164, 0, 458753, 262165, 0, 458753, 262166, 0, 458753, 262167, 0, 458753, 262168, 0, 458753, 262169, 0, 458753, 262170, 0, 458753, 262171, 0, 458753, 262172, 0, 458753, 327680, 0, 458753, 327681, 0, 458753, 327682, 0, 458753, 327683, 0, 458753, 327684, 0, 458753, 327685, 0, 458753, 327686, 0, 458753, 327687, -1610612736, 327680, 327688, -1610612736, 262144, 327689, -1610612736, 262144, 327690, -1610612736, 262144, 327691, -1610612736, 262144, 327692, -1073741824, 262147, 327693, 0, 262145, 327694, 0, 262145, 327695, 0, 262145, 327696, 1610612736, 262144, 327697, 0, 458753, 327698, 0, 458753, 327699, 0, 458753, 327700, 0, 458753, 327701, 0, 458753, 327702, 0, 458753, 327703, 0, 458753, 327704, 0, 458753, 327705, 0, 458753, 327706, 0, 458753, 327707, 0, 458753, 327708, 0, 458753, 393216, 0, 458753, 393217, 0, 458753, 393218, 0, 458753, 393219, 0, 458753, 393220, 0, 458753, 393221, 0, 458753, 393222, 0, 458753, 393223, 0, 262144, 393224, 0, 262145, 393225, 0, 262145, 393226, 0, 262145, 393227, 0, 262145, 393228, 0, 262145, 393229, 0, 262145, 393230, 0, 262145, 393231, 0, 262145, 393232, 1610612736, 262144, 393233, 0, 458753, 393234, 0, 458753, 393235, 0, 458753, 393236, 0, 458753, 393237, 0, 458753, 393238, 0, 458753, 393239, 0, 458753, 393240, 0, 458753, 393241, 0, 458753, 393242, 0, 458753, 393243, 0, 458753, 393244, 0, 458753, 458752, 0, 458753, 458753, 0, 458753, 458754, 0, 458753, 458755, 0, 458753, 458756, 0, 458753, 458757, 0, 458753, 458758, 0, 458753, 458759, 0, 262144, 458760, 0, 262145, 458761, 0, 262145, 458762, 0, 262145, 458763, -1610612736, 262147, 458764, -1073741824, 262144, 458765, -1073741824, 262144, 458766, -1073741824, 262144, 458767, -1073741824, 262144, 458768, -1073741824, 327680, 458769, 0, 458753, 458770, 0, 458753, 458771, 0, 458753, 458772, 0, 458753, 458773, 0, 458753, 458774, 0, 458753, 458775, 0, 458753, 458776, 0, 458753, 458777, 0, 458753, 458778, 0, 458753, 458779, 0, 458753, 458780, 0, 458753, 524288, 0, 458753, 524289, 0, 458753, 524290, 0, 458753, 524291, 0, 458753, 524292, 0, 458753, 524293, 0, 458753, 524294, 0, 458753, 524295, 0, 262144, 524296, 0, 262145, 524297, 0, 262145, 524298, 0, 262145, 524299, 1610612736, 262144, 524300, 0, 458753, 524301, 0, 458753, 524302, 0, 458753, 524303, 0, 458753, 524304, 0, 458753, 524305, 0, 458753, 524306, 0, 458753, 524307, 0, 458753, 524308, 0, 458753, 524309, 0, 458753, 524310, 0, 458753, 524311, 0, 458753, 524312, 0, 458753, 524313, 0, 458753, 524314, 0, 458753, 524315, 0, 458753, 524316, 0, 458753, 589824, 0, 458753, 589825, 0, 458753, 589826, 0, 458753, 589827, 0, 458753, 589828, 0, 458753, 589829, 0, 458753, 589830, 0, 458753, 589831, 0, 262144, 589832, 0, 262145, 589833, 0, 262145, 589834, 0, 262145, 589835, 0, 262147, 589836, -1610612736, 262144, 589837, -1610612736, 262144, 589838, -1610612736, 262144, 589839, -1610612736, 262144, 589840, -1610612736, 262144, 589841, -1610612736, 262144, 589842, -1610612736, 262144, 589843, -1610612736, 262144, 589844, -1610612736, 262144, 589845, -1610612736, 262144, 589846, -1610612736, 262144, 589847, -1610612736, 262144, 589848, -1610612736, 262144, 589849, -1610612736, 262144, 589850, 0, 458753, 589851, 0, 458753, 589852, 0, 458753, 655360, 0, 458753, 655361, 0, 458753, 655362, 0, 458753, 655363, 0, 458753, 655364, 0, 458753, 655365, 0, 458753, 655366, 0, 458753, 655367, 0, 262144, 655368, 0, 262145, 655369, 0, 262145, 655370, 0, 262145, 655371, 0, 262145, 655372, 0, 262145, 655373, 0, 262145, 655374, 0, 262145, 655375, 0, 262145, 655376, 0, 262145, 655377, 0, 262145, 655378, 0, 262145, 655379, 0, 262145, 655380, 0, 262145, 655381, 0, 262145, 655382, 0, 262145, 655383, 0, 262145, 655384, 0, 262145, 655385, 0, 262145, 655386, 0, 458753, 655387, 0, 458753, 655388, 0, 458753, 720896, 0, 458753, 720897, 0, 458753, 720898, 0, 458753, 720899, 0, 458753, 720900, 0, 458753, 720901, 0, 458753, 720902, 0, 458753, 720903, 0, 262144, 720904, 0, 262145, 720905, 0, 262145, 720906, 0, 262145, 720907, 0, 262145, 720908, 0, 262145, 720909, 0, 262145, 720910, 0, 262145, 720911, 0, 262145, 720912, 0, 262145, 720913, 0, 262145, 720914, 0, 262145, 720915, 0, 262145, 720916, 0, 262145, 720917, 0, 262145, 720918, 0, 262145, 720919, 0, 262145, 720920, 0, 262145, 720921, 0, 262145, 720922, 0, 458753, 720923, 0, 458753, 720924, 0, 458753, 786432, 0, 458753, 786433, 0, 458753, 786434, 0, 458753, 786435, 0, 458753, 786436, 0, 458753, 786437, 0, 458753, 786438, 0, 458753, 786439, 0, 327680, 786440, -1073741824, 262144, 786441, -1073741824, 262144, 786442, -1073741824, 262144, 786443, -1073741824, 262144, 786444, -1073741824, 262144, 786445, -1073741824, 262144, 786446, -1073741824, 262144, 786447, -1073741824, 262144, 786448, -1073741824, 262144, 786449, -1073741824, 262144, 786450, -1073741824, 262144, 786451, -1073741824, 262144, 786452, -1073741824, 262144, 786453, -1073741824, 262144, 786454, -1073741824, 262144, 786455, -1073741824, 262144, 786456, -1073741824, 262144, 786457, -1073741824, 262144, 786458, 0, 458753, 786459, 0, 458753, 786460, 0, 458753, 851968, 0, 458753, 851969, 0, 458753, 851970, 0, 458753, 851971, 0, 458753, 851972, 0, 458753, 851973, 0, 458753, 851974, 0, 458753, 851975, 0, 458753, 851976, 0, 458753, 851977, 0, 458753, 851978, 0, 458753, 851979, 0, 458753, 851980, 0, 458753, 851981, 0, 458753, 851982, 0, 458753, 851983, 0, 458753, 851984, 0, 458753, 851985, 0, 458753, 851986, 0, 458753, 851987, 0, 458753, 851988, 0, 458753, 851989, 0, 458753, 851990, 0, 458753, 851991, 0, 458753, 851992, 0, 458753, 851993, 0, 458753, 851994, 0, 458753, 851995, 0, 458753, 851996, 0, 458753, 917504, 0, 458753, 917505, 0, 458753, 917506, 0, 458753, 917507, 0, 458753, 917508, 0, 458753, 917509, 0, 458753, 917510, 0, 458753, 917511, 0, 458753, 917512, 0, 458753, 917513, 0, 458753, 917514, 0, 458753, 917515, 0, 458753, 917516, 0, 458753, 917517, 0, 458753, 917518, 0, 458753, 917519, 0, 458753, 917520, 0, 458753, 917521, 0, 458753, 917522, 0, 458753, 917523, 0, 458753, 917524, 0, 458753, 917525, 0, 458753, 917526, 0, 458753, 917527, 0, 458753, 917528, 0, 458753, 917529, 0, 458753, 917530, 0, 458753, 917531, 0, 458753, 917532, 0, 458753 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyCommander" parent="." instance=ExtResource( 16 )]
wave_manager_path = NodePath("../WaveManager")
call_button_path = NodePath("../EnemyCallButton")

[node name="WaveManager" parent="." instance=ExtResource( 10 )]

[node name="EnemyWave" parent="WaveManager" instance=ExtResource( 13 )]
delay_in_sec = 5.0
description = "For train your skill..."

[node name="EnemyGroup" parent="WaveManager/EnemyWave" instance=ExtResource( 12 )]
num_of_enemies = 2

[node name="EnemyGroup2" parent="WaveManager/EnemyWave" instance=ExtResource( 12 )]
enemy_resource = ExtResource( 15 )
num_of_enemies = 2

[node name="EnemyWave2" parent="WaveManager" instance=ExtResource( 13 )]

[node name="EnemyGroup" parent="WaveManager/EnemyWave2" instance=ExtResource( 12 )]
enemy_resource = ExtResource( 18 )

[node name="EnemyGroup2" parent="WaveManager/EnemyWave2" instance=ExtResource( 12 )]
enemy_resource = ExtResource( 19 )
delay_in_sec = 4.0

[node name="EnemyGroup3" parent="WaveManager/EnemyWave2" instance=ExtResource( 12 )]
enemy_resource = ExtResource( 15 )
delay_in_sec = 3.0

[node name="EnemyGroup4" parent="WaveManager/EnemyWave2" instance=ExtResource( 12 )]
enemy_resource = ExtResource( 17 )
delay_in_sec = 3.0

[node name="HitArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 1618.29, 704.646 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 2 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 0, 5.45386 )
navpoly = SubResource( 3 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 928, -34 )
__meta__ = {
"_gizmo_extents_": 32.0
}

[node name="EnemyCallButton" parent="." instance=ExtResource( 14 )]
position = Vector2( 929.326, 59.5818 )

[node name="StrategicPoint" parent="." instance=ExtResource( 3 )]
position = Vector2( 448.08, 535.259 )

[node name="StrategicPoint2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1090.67, 352 )

[node name="Details" type="Node2D" parent="."]

[node name="BushRound" type="Sprite" parent="Details"]
position = Vector2( 800.45, 5.67276 )
rotation = 0.261799
scale = Vector2( 1.15685, 1.15685 )
texture = ExtResource( 9 )

[node name="BushRound2" type="Sprite" parent="Details"]
position = Vector2( 662.052, 358.35 )
texture = ExtResource( 9 )

[node name="BushRound3" type="Sprite" parent="Details"]
position = Vector2( 6.42078, 106.851 )
texture = ExtResource( 9 )

[node name="BushRound4" type="Sprite" parent="Details"]
position = Vector2( 54.0611, 295.346 )
texture = ExtResource( 9 )

[node name="BushRound5" type="Sprite" parent="Details"]
position = Vector2( 136.469, 602.251 )
texture = ExtResource( 9 )

[node name="BushRound6" type="Sprite" parent="Details"]
position = Vector2( 1038.56, 103.663 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 9 )

[node name="BushRound7" type="Sprite" parent="Details"]
position = Vector2( 299.603, 785.567 )
texture = ExtResource( 9 )

[node name="BushRound18" type="Sprite" parent="Details"]
position = Vector2( 55.3788, 836.509 )
texture = ExtResource( 9 )

[node name="BushRound8" type="Sprite" parent="Details"]
position = Vector2( 691.461, 837.702 )
texture = ExtResource( 9 )

[node name="BushRound9" type="Sprite" parent="Details"]
position = Vector2( 796.496, 514.248 )
texture = ExtResource( 9 )

[node name="BushRound10" type="Sprite" parent="Details"]
position = Vector2( 1147.23, 133.031 )
rotation = -0.803496
texture = ExtResource( 9 )

[node name="BushRound11" type="Sprite" parent="Details"]
position = Vector2( 419.01, 181.803 )
texture = ExtResource( 9 )

[node name="BushRound12" type="Sprite" parent="Details"]
position = Vector2( 1026.66, 456.756 )
scale = Vector2( 1.36419, 1.36419 )
texture = ExtResource( 9 )

[node name="BushRound13" type="Sprite" parent="Details"]
position = Vector2( 1416.31, 124.622 )
rotation = -0.803496
texture = ExtResource( 9 )

[node name="BushRound14" type="Sprite" parent="Details"]
position = Vector2( 1303.15, 608.572 )
rotation = -0.803496
texture = ExtResource( 9 )

[node name="BushRound15" type="Sprite" parent="Details"]
position = Vector2( 1453.28, 561.27 )
rotation = -0.803496
scale = Vector2( 0.813589, 0.813589 )
texture = ExtResource( 9 )

[node name="BushRound17" type="Sprite" parent="Details"]
position = Vector2( 1528.02, 593.034 )
rotation = -0.803496
scale = Vector2( 0.885082, 0.885082 )
texture = ExtResource( 9 )

[node name="BushRound16" type="Sprite" parent="Details"]
position = Vector2( 1479.74, 600.69 )
rotation = -0.803496
scale = Vector2( 1.2578, 1.2578 )
texture = ExtResource( 9 )

[node name="Bush" type="Sprite" parent="Details"]
position = Vector2( 317.429, 580.757 )
texture = ExtResource( 8 )

[node name="Bush2" type="Sprite" parent="Details"]
position = Vector2( 540.487, 228.098 )
rotation = -0.738602
texture = ExtResource( 8 )

[node name="Bush3" type="Sprite" parent="Details"]
position = Vector2( 187.31, 441.686 )
rotation = -0.523598
texture = ExtResource( 8 )

[node name="Bush4" type="Sprite" parent="Details"]
position = Vector2( 146.947, 53.1914 )
rotation = 0.785397
texture = ExtResource( 8 )

[node name="Bush5" type="Sprite" parent="Details"]
position = Vector2( 1118.15, 186.861 )
scale = Vector2( 0.867567, 0.867567 )
texture = ExtResource( 8 )

[node name="Bush6" type="Sprite" parent="Details"]
position = Vector2( 976.071, 820.089 )
rotation = -0.523598
texture = ExtResource( 8 )

[node name="Bush7" type="Sprite" parent="Details"]
position = Vector2( 157.038, 825.134 )
texture = ExtResource( 8 )

[node name="Bush12" type="Sprite" parent="Details"]
position = Vector2( 472.536, 611.274 )
rotation = -0.261799
texture = ExtResource( 8 )

[node name="Bush13" type="Sprite" parent="Details"]
position = Vector2( 1209.93, 134.162 )
rotation = -1.85069
texture = ExtResource( 8 )

[node name="Bush8" type="Sprite" parent="Details"]
position = Vector2( 1028.16, 535.321 )
texture = ExtResource( 8 )

[node name="Bush9" type="Sprite" parent="Details"]
position = Vector2( 1178.54, 179.865 )
rotation = -0.803496
scale = Vector2( 0.839115, 0.839115 )
texture = ExtResource( 8 )

[node name="Bush10" type="Sprite" parent="Details"]
position = Vector2( 1352.79, 809.998 )
rotation = 1.57079
texture = ExtResource( 8 )

[node name="Bush11" type="Sprite" parent="Details"]
position = Vector2( 1537.79, 862.134 )
rotation = -0.523598
texture = ExtResource( 8 )

[node name="BushSpike" type="Sprite" parent="Details"]
position = Vector2( 957.391, 546.179 )
texture = ExtResource( 6 )

[node name="BushSpike2" type="Sprite" parent="Details"]
position = Vector2( 641.248, 197.073 )
rotation = -0.523598
texture = ExtResource( 6 )

[node name="BushSpike3" type="Sprite" parent="Details"]
position = Vector2( 308.624, 158.117 )
rotation = 0.523598
texture = ExtResource( 6 )

[node name="RockSmall" type="Sprite" parent="Details"]
position = Vector2( 1224.51, 376.099 )
texture = ExtResource( 5 )

[node name="RockSmall2" type="Sprite" parent="Details"]
position = Vector2( 804.26, 190.444 )
rotation = -1.57079
scale = Vector2( 1.42898, 1.16062 )
texture = ExtResource( 5 )

[node name="RockSmall3" type="Sprite" parent="Details"]
position = Vector2( 85.7697, 486.828 )
texture = ExtResource( 5 )

[node name="RockSmall4" type="Sprite" parent="Details"]
position = Vector2( 1154.09, 40.7685 )
rotation = -0.803496
texture = ExtResource( 5 )

[node name="RockSmall5" type="Sprite" parent="Details"]
position = Vector2( 377.852, 759.861 )
texture = ExtResource( 5 )

[node name="RockBig" type="Sprite" parent="Details"]
position = Vector2( 1382.79, 410.154 )
rotation = -0.523598
texture = ExtResource( 4 )

[node name="RockBig2" type="Sprite" parent="Details"]
position = Vector2( 390.205, 340.812 )
rotation = -0.261799
texture = ExtResource( 4 )

[node name="RockBig3" type="Sprite" parent="Details"]
position = Vector2( 900.812, 521.299 )
rotation = 0.261799
texture = ExtResource( 4 )

[node name="RockBig4" type="Sprite" parent="Details"]
position = Vector2( 507.273, 770.69 )
rotation = -0.523598
scale = Vector2( 1.29971, 1.29971 )
texture = ExtResource( 4 )

[node name="RockMedium" type="Sprite" parent="Details"]
position = Vector2( 1123.24, 580.001 )
texture = ExtResource( 7 )

[node name="RockMedium4" type="Sprite" parent="Details"]
position = Vector2( 95.6602, 699.408 )
texture = ExtResource( 7 )

[node name="RockMedium5" type="Sprite" parent="Details"]
position = Vector2( 151.159, 278.96 )
texture = ExtResource( 7 )

[node name="RockMedium7" type="Sprite" parent="Details"]
position = Vector2( 485.836, 102.371 )
texture = ExtResource( 7 )

[node name="RockMedium8" type="Sprite" parent="Details"]
position = Vector2( 1273.19, 251.734 )
rotation = -0.803496
texture = ExtResource( 7 )

[node name="RockMedium9" type="Sprite" parent="Details"]
position = Vector2( 1427.64, 31.7361 )
rotation = -0.803496
texture = ExtResource( 7 )

[node name="RockMedium10" type="Sprite" parent="Details"]
position = Vector2( 1103.05, 860.86 )
texture = ExtResource( 7 )
script = ExtResource( 20 )

[node name="RockMedium2" type="Sprite" parent="Details"]
position = Vector2( 1435.59, 262.309 )
rotation = -2.24594
texture = ExtResource( 7 )

[node name="RockMedium3" type="Sprite" parent="Details"]
position = Vector2( 723.87, 477.064 )
texture = ExtResource( 7 )

[node name="CoinParticles2D" parent="." instance=ExtResource( 21 )]
position = Vector2( 85.5263, -201.343 )

[node name="CoinParticles2D2" parent="." instance=ExtResource( 21 )]
[connection signal="last_enemy_in_actual_wave_spawned" from="WaveManager" to="." method="_on_WaveManager_last_enemy_in_actual_wave_spawned"]
[connection signal="last_enemy_spawned" from="WaveManager" to="." method="_on_WaveManager_last_enemy_spawned"]
[connection signal="last_wave" from="WaveManager" to="." method="_on_WaveManager_last_wave"]
[connection signal="spawn_enemy" from="WaveManager" to="." method="_on_WaveManager_spawn_enemy"]

[editable path="HitArea"]
